--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "",
   "version": "1.0.0",
   "description": "",
+  "scripts": {
+    "build-css": "./bin/build-css",
+    "watch-css": "./bin/watch-css"
+  },
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,17 +15,13 @@
     "url": "" // git clone address
   },
   "author": "Peter Riley Osborne",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "" // github repo url/issues
   },
   "homepage": "",//  github repo url#readme
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-sass": "~0.3.0",
-    "grunt-contrib-watch": "~0.4.4"
+    "node-sass": "3.4.2",
+    "nodemon": "1.8.1"
   }
 }
